Fix edit menu disappearing on small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -137,6 +137,7 @@ td:last-child, button {
 .dropdown-options-content {
   display: none;
   position: absolute;
+  min-width: 90px;
   width: 14vw;
   border-radius: 20px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -163,4 +164,10 @@ td:last-child, button {
   border-bottom-right-radius: 7px;
   border-bottom-left-radius: 7px;
   font-size: 20px;
+}
+
+@media (max-width: 575px){
+    .dropdown-options-content {
+        right: 20px;
+    }
 }
